Arranged for scores to be displayed in descending value. Fixed bugs relating timer falling below 0. Finished game over functionality

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <input type="text" name="initials" id="initialsInput" required>
         <button id="submit">submit</button>
     </div>
+    <div id="gameOver">
+        <p>Game Over! Your score fell below 0!</p>
+        <button id="retry">Retry</button>
+    </div>
     <div id="highScoreDiv">
         <h4>High Scores</h4>
         <ol id="scoreList">
