Finished annotating CSS. Final styling.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- div to display questions as they are answered -->
     <div id="question">
         <h2 id="question-h1"></h2>
-        <div>
+        <div id="buttons-question">
             <button class="answer"></button>
             <button class="answer"></button>
             <button class="answer"></button>
@@ -32,10 +32,10 @@
     </div>
     <!-- div displayed at the end of the quiz to submit score -->
     <div id="initials">
-        <h3>Test Complete</h3>
-        <label for="initials-input">Enter initials here:</label>
+        <h3>Quiz completed!</h3>
+        <label for="initials-input">Enter name here:</label>
         <input type="text" name="initials" id="initials-input" required>
-        <button id="submit">submit</button>
+        <button id="submit">Submit</button>
     </div>
     <!-- displays if user got the question right/wrong -->
     <div>
