--- a/index.html
+++ b/index.html
@@ -5,15 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/styles/styles.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <!-- Home Page -->
         <div class="homePage">
-            
+            <h1 class="homeH1">Welcome!</h1>
+            <p class="homeP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae quod nemo laboriosam alias, necessitatibus saepe placeat optio culpa omnis error voluptas maxime illum praesentium pariatur, officiis nostrum quas in. Sunt.</p>
+            <button type="button" id="takeQuizBtn" class="btn">Take quiz!</button>
+            <button type="button" id="navigateToScoresBtn" class="btn">View High Scores</button>
+        </div>
+        <!-- High Score Page -->
+        <div class="highScorePage">
+            <h2 class="highScoreH2">Scores</h2>
+            <p class="highScoreP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae quod nemo laboriosam alias, necessitatibus saepe placeat optio culpa omnis error voluptas maxime illum praesentium pariatur, officiis nostrum quas in. Sunt.</p>
+            <button type="button" id="resetScoreBtn" class="btn">Reset Scores</button>
+            <button type="button" id="navigateHomeBtn" class="btn">Back to Home</button>
+        </div>
+        <!-- Quiz Page -->
+        <div class="quizPage">
+            <!-- Timer and Home button -->
+            <div class="quizHeader">
+                <button type="button" class="navigateHomeBtn">Home</button>
+                <p class="timer">Time: </p>
+            </div>
+            <h2 class="quizH2">Scores</h2>
+            <p class="quizP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae quod nemo laboriosam alias, necessitatibus saepe placeat optio culpa omnis error voluptas maxime illum praesentium pariatur, officiis nostrum quas in. Sunt.</p>
+            <button type="button" class="optionBtn">Option</button>
+            <button type="button" class="optionBtn">Option</button>
+            <button type="button" class="optionBtn">Option</button>
+            <button type="button" class="optionBtn">Option</button>
+        </div>
+        <!-- Quiz Finished Page -->
+        <div class="quizFinishedPage">
+            <h2 class="quizFinishedH2">All Done!</h2>
+            <p class="quizP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae quod nemo laboriosam alias, necessitatibus saepe placeat optio culpa omnis error voluptas maxime illum praesentium pariatur, officiis nostrum quas in. Sunt.</p>
+            <label for="enterInitials">Enter Initials:</label>
+            <input type="text" name="enterInitials">
+            <button type="button" id="initialsBtn" class="btn">Submit!</button>
         </div>
     </div>
-    <script src="Assets/scripts/app.js"></script>
+    <script type="module" src="./Assets/scripts/app.js"></script>
 </body>
 </html>
