Finished HTML structure and initial CSS

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <button type="button" id="navigateToScoresBtn" class="btn">View High Scores</button>
         </div>
         <!-- High Score Page -->
-        <div class="highScorePage">
+        <div class="highScorePage hidden">
             <h2 class="highScoreH2">Scores</h2>
             <p class="highScoreP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae quod nemo laboriosam alias, necessitatibus saepe placeat optio culpa omnis error voluptas maxime illum praesentium pariatur, officiis nostrum quas in. Sunt.</p>
             <button type="button" id="resetScoreBtn" class="btn">Reset Scores</button>
             <button type="button" id="navigateHomeBtn" class="btn">Back to Home</button>
         </div>
         <!-- Quiz Page -->
-        <div class="quizPage">
+        <div class="quizPage hidden">
             <!-- Timer and Home button -->
             <div class="quizHeader">
                 <button type="button" class="navigateHomeBtn">Home</button>
@@ -39,7 +39,7 @@
             <button type="button" class="optionBtn">Option</button>
         </div>
         <!-- Quiz Finished Page -->
-        <div class="quizFinishedPage">
+        <div class="quizFinishedPage hidden">
             <h2 class="quizFinishedH2">All Done!</h2>
             <p class="quizP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae quod nemo laboriosam alias, necessitatibus saepe placeat optio culpa omnis error voluptas maxime illum praesentium pariatur, officiis nostrum quas in. Sunt.</p>
             <label for="enterInitials">Enter Initials:</label>
