--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
     <div class="container">
         <!-- Home Page -->
         <div class="homePage">
-            <h1 class="homeH1">Welcome!</h1>
-            <p class="homeP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae quod nemo laboriosam alias, necessitatibus saepe placeat optio culpa omnis error voluptas maxime illum praesentium pariatur, officiis nostrum quas in. Sunt.</p>
+            <div class="coderDiv">
+                <img src="./Assets/pictures/Coder.png" alt="Animated Picture of Coding Student" class="coderImg">
+            </div>
+            <h1 class="homeH1">CodeQuiz</h1>
+            <p class="homeP">Test your coding knowledge!</p>
             <button type="button" id="takeQuizBtn" class="btn">Take quiz!</button>
             <button type="button" id="navigateToScoresBtn" class="btn">View High Scores</button>
         </div>
         <!-- High Score Page -->
         <div class="highScorePage hidden">
-            <h2 class="highScoreH2">Scores</h2>
-            <p class="highScoreP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae quod nemo laboriosam alias, necessitatibus saepe placeat optio culpa omnis error voluptas maxime illum praesentium pariatur, officiis nostrum quas in. Sunt.</p>
+            <h2 class="highScoreH2">High Scores</h2>
+            <p class="highScoreP">Can you top the chart?</p>
+            <ul class="scoresUl">
+                <li class="scoresLi">User3 - 20</li>
+                <li class="scoresLi">User1 - 15</li>
+                <li class="scoresLi">User2 - 10</li>
+            </ul>
             <button type="button" id="resetScoreBtn" class="btn">Reset Scores</button>
             <button type="button" id="navigateHomeBtn" class="btn">Back to Home</button>
         </div>
@@ -29,21 +37,23 @@
             <!-- Timer and Home button -->
             <div class="quizHeader">
                 <button type="button" class="navigateHomeBtn">Home</button>
-                <p class="timer">Time: </p>
+                <p class="timer">Time: 100</p>
             </div>
-            <h2 class="quizH2">Scores</h2>
-            <p class="quizP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae quod nemo laboriosam alias, necessitatibus saepe placeat optio culpa omnis error voluptas maxime illum praesentium pariatur, officiis nostrum quas in. Sunt.</p>
-            <button type="button" class="optionBtn">Option</button>
-            <button type="button" class="optionBtn">Option</button>
-            <button type="button" class="optionBtn">Option</button>
-            <button type="button" class="optionBtn">Option</button>
+            <div class="questionContainer">
+                <h2 class="quizH2">Question #</h2>
+                <p class="quizP">What is TypeScript?</p>
+                <button type="button" class="optionBtn">Option</button>
+                <button type="button" class="optionBtn">Option</button>
+                <button type="button" class="optionBtn">Option</button>
+                <button type="button" class="optionBtn">Option</button>
+            </div>
         </div>
         <!-- Quiz Finished Page -->
         <div class="quizFinishedPage hidden">
             <h2 class="quizFinishedH2">All Done!</h2>
-            <p class="quizP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae quod nemo laboriosam alias, necessitatibus saepe placeat optio culpa omnis error voluptas maxime illum praesentium pariatur, officiis nostrum quas in. Sunt.</p>
+            <p class="quizP">Input your initials and submit your score!</p>
             <label for="enterInitials">Enter Initials:</label>
-            <input type="text" name="enterInitials">
+            <input type="text" name="enterInitials" class="initialsInput">
             <button type="button" id="initialsBtn" class="btn">Submit!</button>
         </div>
     </div>
