Added timer logic

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="quizPage">
             <!-- Timer and Home button -->
             <div class="quizHeader">
-                <button type="button" class="navigateHomeBtn" id="navigateHomeBtnQuiz">Home</button>
-                <p class="timer">Time: 100</p>
+                <button type="button" class="navigateHomeBtn" id="navigateHomeBtnQuiz">Quit</button>
+                <p class="timer">Time: </p>
             </div>
             <div class="questionContainer">
                 <h2 class="quizH2">Question #</h2>
