--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <h2 class="highScoreH2">High Scores</h2>
             <p class="highScoreP">Can you top the chart?</p>
             <ul class="scoresUl">
-                <li class="scoresLi">User3 - 20</li>
+                <!-- <li class="scoresLi">User3 - 20</li>
                 <li class="scoresLi">User1 - 15</li>
-                <li class="scoresLi">User2 - 10</li>
+                <li class="scoresLi">User2 - 10</li> -->
             </ul>
             <button type="button" id="resetScoreBtn" class="btn">Reset Scores</button>
             <button type="button" id="navigateHomeBtnScores" class="btn">Back to Home</button>
