Added question score generation and quiz completion logic

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
             <div class="questionContainer">
                 <h2 class="quizH2">Question #</h2>
                 <p class="quizP">What is TypeScript?</p>
-                <button type="button" class="optionBtn" id="wrong1">Option</button>
-                <button type="button" class="optionBtn" id="wrong2">Option</button>
-                <button type="button" class="optionBtn" id="right">Option</button>
-                <button type="button" class="optionBtn" id="wrong3">Option</button>
+                <div class="quizChoicesDiv">
+                    <button type="button" class="optionBtn" id="wrong1">Option</button>
+                    <button type="button" class="optionBtn" id="wrong2">Option</button>
+                    <button type="button" class="optionBtn" id="right">Option</button>
+                    <button type="button" class="optionBtn" id="wrong3">Option</button>
+                </div>
             </div>
         </div>
         <!-- Quiz Finished Page -->
