Remade sorting logic to account for DNF, removed p text bug, added time penalty.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <!-- Quiz Finished Page -->
         <div class="quizFinishedPage">
             <h2 class="quizFinishedH2">All Done!</h2>
+            <h3 id="finalScore">Score: </h3>
             <p class="quizP">Input your initials and submit your score!</p>
             <label for="enterInitials">Enter Initials:</label>
             <input type="text" name="enterInitials" class="initialsInput">
